[tool.poetry]
name = "module5"
version = "0.1.0"
description = ""
authors = ["Terinor <kirstruk01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
websockets = "^12.0"
aiofile = "^3.8.8"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
